Document the authcontroller
