# backend/storage/api-docs/api-docs.json
@@ -19,7 +19,7 @@
         "/api/register": {
             "post": {
                 "tags": [
-                    "Auth"
+                    "Authentication"
                 ],
                 "summary": "Create a user",
                 "operationId": "8a56853624e025573120a09a4c75d468",
@@ -28,12 +28,21 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "": {
+                                    "data": {
                                         "properties": {
                                             "name": {
                                                 "type": "string"
                                             },
                                             "email": {
+                                                "type": "string"
+                                            },
+                                            "age": {
+                                                "type": "integer"
+                                            },
+                                            "password": {
+                                                "type": "string"
+                                            },
+                                            "password_confirmation": {
                                                 "type": "string"
                                             }
                                         },
@@ -43,7 +52,10 @@
                                 "type": "object",
                                 "example": {
                                     "name": "Janko hrasko",
-                                    "email": "janko@email.com"
+                                    "email": "janko@email.com",
+                                    "age": 15,
+                                    "password": "hrasko123",
+                                    "password_confirmation": "hrasko123"
                                 }
                             }
                         }
@@ -51,30 +63,14 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "success",
+                        "description": "User created successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "id": {
-                                            "type": "number",
-                                            "example": 1
-                                        },
-                                        "title": {
-                                            "type": "string",
-                                            "example": "title"
-                                        },
-                                        "content": {
-                                            "type": "string",
-                                            "example": "content"
-                                        },
-                                        "updated_at": {
-                                            "type": "string",
-                                            "example": "2021-12-11T09:25:53.000000Z"
-                                        },
-                                        "created_at": {
-                                            "type": "string",
-                                            "example": "2021-12-11T09:25:53.000000Z"
+                                        "message": {
+                                            "type": "object",
+                                            "example": "success"
                                         }
                                     },
                                     "type": "object"
@@ -82,15 +78,24 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "invalid",
+                    "422": {
+                        "description": "Failed validation",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "msg": {
+                                        "message": {
                                             "type": "string",
-                                            "example": "fail"
+                                            "example": "Musite mat viac ako 16 rokov"
+                                        },
+                                        "errors": {
+                                            "properties": {
+                                                "age": {
+                                                    "type": "object",
+                                                    "example": "Musite mat viac ako 16 rokov"
+                                                }
+                                            },
+                                            "type": "object"
                                         }
                                     },
                                     "type": "object"
@@ -104,7 +109,7 @@
         "/api/login": {
             "post": {
                 "tags": [
-                    "Auth"
+                    "Authentication"
                 ],
                 "summary": "Login",
                 "operationId": "a3b306d14572d1f4bd6c064b3233e7b8",
@@ -115,10 +120,10 @@
                                 "properties": {
                                     "": {
                                         "properties": {
-                                            "name": {
+                                            "email": {
                                                 "type": "string"
                                             },
-                                            "email": {
+                                            "password": {
                                                 "type": "string"
                                             }
                                         },
@@ -127,8 +132,8 @@
                                 },
                                 "type": "object",
                                 "example": {
-                                    "name": "Janko hrasko",
-                                    "email": "janko@email.com"
+                                    "email": "janko@email.com",
+                                    "password": "hrasko123"
                                 }
                             }
                         }
@@ -136,7 +141,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "success",
+                        "description": "Logged in successfully",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -145,21 +150,17 @@
                                             "type": "number",
                                             "example": 1
                                         },
-                                        "title": {
+                                        "name": {
                                             "type": "string",
-                                            "example": "title"
+                                            "example": "tvojtato"
                                         },
-                                        "content": {
+                                        "email": {
                                             "type": "string",
-                                            "example": "content"
+                                            "example": "tvojtato@email.com"
                                         },
-                                        "updated_at": {
-                                            "type": "string",
-                                            "example": "2021-12-11T09:25:53.000000Z"
-                                        },
-                                        "created_at": {
-                                            "type": "string",
-                                            "example": "2021-12-11T09:25:53.000000Z"
+                                        "age": {
+                                            "type": "number",
+                                            "example": 16
                                         }
                                     },
                                     "type": "object"
@@ -167,15 +168,122 @@
                             }
                         }
                     },
-                    "400": {
-                        "description": "invalid",
+                    "422": {
+                        "description": "Failed validation",
                         "content": {
                             "application/json": {
                                 "schema": {
                                     "properties": {
-                                        "msg": {
+                                        "message": {
                                             "type": "string",
-                                            "example": "fail"
+                                            "example": "Email musi byt uz zaregistrovany"
+                                        },
+                                        "errors": {
+                                            "properties": {
+                                                "email": {
+                                                    "type": "object",
+                                                    "example": "Email musi byt uz zaregistrovany"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/user": {
+            "get": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Returns the user instance",
+                "operationId": "7c1cf647d76fad4b3eb1549fa4fe2f4c",
+                "responses": {
+                    "200": {
+                        "description": "User is logged in",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "number",
+                                            "example": 1
+                                        },
+                                        "name": {
+                                            "type": "string",
+                                            "example": "tvojtato"
+                                        },
+                                        "email": {
+                                            "type": "string",
+                                            "example": "tvojtato@email.com"
+                                        },
+                                        "age": {
+                                            "type": "number",
+                                            "example": 16
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "User is not logged in",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unauthenticated"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/logout": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Logs out the user",
+                "operationId": "fe8f3429cd6979b3b4517e186505f9f9",
+                "responses": {
+                    "200": {
+                        "description": "User logged out successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "object",
+                                            "example": "Uspesne ste sa odhlasili"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "User is not logged in",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Unauthenticated"
                                         }
                                     },
                                     "type": "object"
